--- a/settings.json
+++ b/settings.json
@@ -1,30 +1,30 @@
 {
-    "pageTitle": "나만의 동물상 테스트",
-    "mainTitle": "난 무슨 동물상일까",
-    "subtitle": "얼굴로 보는 인공지능 동물상 테스트",
-    "footerText": "&copy; 태영테크 2024. All Rights Reserved.",
+    "pageTitle": "나는 과연 멍청할까",
+    "mainTitle": "난 똑똑할까 멍청할까",
+    "subtitle": "얼굴로 보는 인공지능 멍청이 테스트",
+    "footerText": "&copy; 현서테크 2024. All Rights Reserved.",
     
-    "modelUrl": "https://teachablemachine.withgoogle.com/models/FgauoPNN7/",
+    "modelUrl": "https://teachablemachine.withgoogle.com/models/kWWosYkOu/",
     "classDetails": [
         {
-            "name": "강아지",
-            "title": "강아지상",
-            "explain": "다정다감하고 귀여운 당신은 모든 사람들에게 즐거움을 주는 호감형이다! 상냥하고 활발한 성격으로 어디에서도 인기폭발이지만, 애교와 웃음이 많아 연인에게 특히나 사랑스럽다. 당신은 애인바라기로 애인의 관심이 부족하면 시무룩해지고 외로움을 타는 모습이 마치 강아지와 똑 닮았다!",
-            "celeb": "강아지상 연예인: 박보영, 아이유, 윤승아, 민아(걸스데이), 한지민",
+            "name": "똑똑함",
+            "title": "똑똑한상",
+            "explain": "당신은 공부를 잘해 곧 성공하고 말 상입니다ㅋㅋ 만약 당신이 릴스에 올라온다면 사람들은 보통 와... 나중에의사될것같다, 우와... 병원에서본적있는것같은데 라는 댓글을 받기도 합니다. 가끔은 선생님께 저번에 알려주셨어요, 숙제있습니다 라고 말해서 아이들의 눈초리의 대상이 되기도 합니다 하지만 정말 대단한 얼굴을 가지고 있군요!!! 못생긴 얼굴에 좌절하지 마세요!!!!! ",
+            "celeb": "똑똑한상: 이현서 ",
             "color": "rgba(27, 175, 234, 1)"
         },
         {
-            "name": "말",
-            "title": "말상",
-            "explain": "활발하고 에너지가 넘치는 당신은 첫인상부터 밝고 친근한 이미지를 준다. 명랑하고 긍정적인 태도로 주변 사람들을 기분 좋게 만들며, 사교성이 뛰어나 항상 사람들 사이에서 인기가 많다. 주도적이고 자신감 넘치며, 상황을 주도하는 리더십을 가지고 있어 어디서든 눈에 띈다. 따뜻하고 다정한 성격으로 애인에게 항상 신뢰와 안정감을 주는 당신은 말과 닮았다!",
-            "celeb": "말상 연예인: 박보영, 박민영, 한지민, 이나영, 임윤아(소녀시대)",
+            "name": "멍청이",
+            "title": "멍청한상",
+            "explain": "당신은 겉으로는 다소 많이 부족해보일 수도 있지만 많은 친구들에게 웃음을 주는 사람입니다! 가만히 보고만 있어도 갑자기 친구들이 광각으로 사진을 찍으면서 웃을겁니다. 하지만 놀리는 건 아니고 진짜 웃긴 얼굴인겁니다 어떻게 보면 장점일지도요 수고하세요",
+            "celeb": "멍청한상: 정은유, 오채린, 정해인, 윤소연, 손민교",
             "color": "rgba(251, 176, 59, 1)"
         },
         {
-            "name": "고양이",
-            "title": "고양이상",
-            "explain": "도도하고 섹시한 당신은 첫인상은 차가워 보이지만 묘한 매력을 풍겨 언제나 인기가 넘친다. 자존심이 세계 1등과 맞먹지만 관심 받는 것을 좋아하고 애인에게 관심이 받고 싶을 때는 애교도 부릴 줄 아는 귀여운 매력을 가졌다. 시크한 츤데레로 연인에게 끊임없이 설렘을 안겨주는 당신은 고양이와 닮았다!",
-            "celeb": "고양이상 연예인: 안소희(원더걸스), 오연서, 한예슬, 이성경, 이효리",
+            "name": "일반인",
+            "title": "일반인상",
+            "explain": "당신은 매우 아무런 특징이 없는 사람입니다. 어쩌면 멍청한것보다 더 못생길지도 몰라요. 발전하세요. 같은 반 친구들에게 당신의 이름을 말했을때 다들 처음듣는 표정을 보일 것입니다. 화이팅",
+            "celeb": "일반인상: 모르겟누",
             "color": "rgba(265, 100, 50, 1)"
         }
     ]
